--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12341,62 +12341,68 @@ section.home-search .home-search-mobile {
     @media screen and (max-width: 767px) {
       .salon#content #carousel-salon .carousel-control {
         display: none; } }
-  .salon#content .global-reviews.desktop > a {
-    float: right;
-    text-align: right;
-    width: 100%;
-    font-size: 1.4em; }
-  .salon#content .global-reviews.desktop > img {
-    float: right;
-    height: 20px; }
-  .salon#content .global-reviews.desktop .stars {
-    height: inherit; }
-    .salon#content .global-reviews.desktop .stars a {
-      margin: 0 1px 1px 0; }
-    .salon#content .global-reviews.desktop .stars .star {
-      width: 20px;
-      height: 20px; }
-  .salon#content .global-reviews.mobile {
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 10px; }
-    @media screen and (min-width: 767px) {
-      .salon#content .global-reviews.mobile {
-        display: none !important; } }
-    .salon#content .global-reviews.mobile > img, .salon#content .global-reviews.mobile > a {
-      float: left; }
-    .salon#content .global-reviews.mobile > img {
-      height: 20px; }
-    .salon#content .global-reviews.mobile > a {
+  .salon#content .global-reviews {
+    position: absolute;
+    right: 0; }
+    .salon#content .global-reviews.desktop > a {
+      float: right;
+      text-align: right;
+      width: 100%;
       font-size: 1.4em;
-      margin-left: 10px; }
-    .salon#content .global-reviews.mobile .stars {
-      float: left;
+      margin-top: 5px; }
+      .salon#content .global-reviews.desktop > a img {
+        width: 100px; }
+    .salon#content .global-reviews.desktop > img {
+      float: right;
+      height: 20px; }
+    .salon#content .global-reviews.desktop .stars {
       height: inherit; }
-      .salon#content .global-reviews.mobile .stars .star {
+      .salon#content .global-reviews.desktop .stars a {
+        margin: 0 1px 1px 0; }
+      .salon#content .global-reviews.desktop .stars .star {
         width: 20px;
-        margin: 0 2px 1px 0; }
-    .salon#content .global-reviews.mobile .num-reviews {
-      color: white;
-      font-size: 1.4em;
-      font-weight: bold;
-      text-decoration: underline; }
-      @media screen and (min-width: 992px) {
-        .salon#content .global-reviews.mobile .num-reviews {
-          position: absolute;
-          left: 100%;
-          top: 8px;
-          width: inherit; } }
-      @media screen and (min-width: 480px) and (max-width: 991px) {
-        .salon#content .global-reviews.mobile .num-reviews {
-          float: right; } }
+        height: 20px; }
+    .salon#content .global-reviews.mobile {
+      display: -webkit-flexbox;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-flex-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+      text-align: center;
+      margin-bottom: 10px; }
+      @media screen and (min-width: 767px) {
+        .salon#content .global-reviews.mobile {
+          display: none !important; } }
+      .salon#content .global-reviews.mobile > img, .salon#content .global-reviews.mobile > a {
+        float: left; }
+      .salon#content .global-reviews.mobile > img {
+        height: 20px; }
+      .salon#content .global-reviews.mobile > a {
+        font-size: 1.4em;
+        margin-left: 10px; }
+      .salon#content .global-reviews.mobile .stars {
+        float: left;
+        height: inherit; }
+        .salon#content .global-reviews.mobile .stars .star {
+          width: 20px;
+          margin: 0 2px 1px 0; }
+      .salon#content .global-reviews.mobile .num-reviews {
+        color: white;
+        font-size: 1.4em;
+        font-weight: bold;
+        text-decoration: underline; }
+        @media screen and (min-width: 992px) {
+          .salon#content .global-reviews.mobile .num-reviews {
+            position: absolute;
+            left: 100%;
+            top: 8px;
+            width: inherit; } }
+        @media screen and (min-width: 480px) and (max-width: 991px) {
+          .salon#content .global-reviews.mobile .num-reviews {
+            float: right; } }
   .salon#content .main-content {
     position: relative;
     background-color: white;
@@ -12424,6 +12430,9 @@ section.home-search .home-search-mobile {
       position: relative;
       width: 100%;
       padding-top: 10px; }
+      @media screen and (min-width: 767px) {
+        .salon#content .main-content section.salon-info.open-timetable {
+          margin-bottom: 40px; } }
       .salon#content .main-content section.salon-info p {
         font-size: 1.6em;
         font-weight: 200;
