--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11913,6 +11913,21 @@ section.home-search .home-search-mobile {
     @media screen and (min-width: 768px) {
       #content.search .main-content .tab-pane#salons .row:first-child, #content.search .main-content .tab-pane#adom .row:first-child {
         margin-top: 10px; } }
+    #content.search .main-content .tab-pane#salons .row .business-label, #content.search .main-content .tab-pane#adom .row .business-label {
+      color: white;
+      background-color: #fe5b5f;
+      font-size: 1.6em;
+      padding: 5px 25px 5px 5px;
+      margin: 5px 5px 15px 0;
+      display: inline-block;
+      position: relative;
+      cursor: pointer; }
+      #content.search .main-content .tab-pane#salons .row .business-label span:nth-child(2), #content.search .main-content .tab-pane#adom .row .business-label span:nth-child(2) {
+        font-size: 1.8em;
+        font-weight: 200;
+        position: absolute;
+        top: -3px;
+        right: 5px; }
   #content.search .main-content .tab-pane#salons a.extend-search, #content.search .main-content .tab-pane#adom a.extend-search {
     font-weight: 400;
     font-size: 1.5em; }
