--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -373,6 +373,23 @@
                         margin-top: 10px;                        
                     }
                 }
+                .business-label {
+                    color: white;
+                    background-color: $hairfie;
+                    font-size: 1.6em;
+                    padding: 5px 25px 5px 5px;
+                    margin: 5px 5px 15px 0;
+                    display: inline-block;
+                    position: relative;
+                    cursor: pointer;
+                    span:nth-child(2) {
+                        font-size: 1.8em;
+                        font-weight: $light;
+                        position: absolute;
+                        top: -3px;
+                        right: 5px;
+                    }
+                }
             }
             a.extend-search {
                 font-weight: 400;
