--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -517,8 +517,10 @@
                 }
             }
         }
-        .btn-book {
-            margin-top: 20px;
+        .btn-review {
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 10px;
         }
 
         ul.nav {
