--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10277,7 +10277,7 @@ input:not(:focus).error {
 div.shadow.active {
   position: fixed;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
   left: 0;
   top: 0;
