--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -589,6 +589,126 @@ section.home-search {
         }
     }
 }
+
+#home section.styles {
+    .row {
+        margin-left: -20px;
+        margin-right: -20px;
+        text-align: center;
+
+        > .col-sm-6 {
+            padding-left: 0;
+            padding-right: 0;
+        }
+    }
+    div.sm-sqr {
+        width: 50%;
+        padding-top: 50%;
+    }
+    div.big-sqr {
+        padding-top: 50%;
+    }
+    div.rectangle {
+        width: 100%;
+        padding-top: 50%;
+        background-position: center;
+        background-size: cover;
+    }
+    .background {
+        @include flex-center;
+        justify-content: center;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: 10px;
+        &:hover {
+            @include box-shadow(0px 4px 5px 0px $grey);
+            @include transition (all 0.2s ease-out);
+            background-color: black;
+            opacity: 0.8;
+        }
+        &.carre {
+            background: url(../img/home/style-carre.jpg) no-repeat center center;
+            background-size: contain;
+        }
+        &.homme {
+            background: url(../img/home/style-homme.jpg) no-repeat center center;
+            background-size: contain;
+        }
+        &.mariage {
+            background: url(../img/home/style-mariage.jpg) no-repeat center center;
+        }
+        &.avant-apres {
+            background: url(../img/home/style-avant-apres.jpg) no-repeat center center;
+            background-size: contain;
+        }
+    }
+    .background:before {
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0.3;
+        background: rgba(0,0,0,.5);
+        @include transition(opacity 0.2s);
+
+    }
+
+    .background:hover:before {
+        opacity: 1;
+    }
+    .btn-whitered {
+        margin-top: 20px;
+    }
+    #style-content {
+        z-index: 0;
+        .title {
+            text-transform: uppercase;
+            font-size: 1.6em;
+            color: $grey;
+            margin-bottom: -5px;
+        }
+        .style {
+            font-size: 2.8em;
+            font-weight: $regular;
+            color: white;
+        }
+    }
+    @media (max-width: $screen-xs-max) {
+        .row {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+        div.rectangle {
+            width: 50%;
+            background-position: center;
+
+        }
+        div.big-sqr {
+            padding-top: 50%;
+            margin-left: 0;
+            padding-right: 15px;
+            width: 50%;
+        }
+        .background {
+            margin: 5px;
+        }
+        #style-content {
+            .title {
+                font-size: 1.4em;
+            }
+            .style {
+                font-size: 2em;
+            }
+        }
+    }
+    
+}
+
 #home section.deals {
     .row > div {
         @include transition(opacity 0.5s);
