--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11490,9 +11490,7 @@ section.home-search .home-search-mobile {
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
     -ms-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    background-color: black;
-    opacity: 0.8; }
+    -o-transition: all 0.2s ease-out; }
   #home section.styles .background.carre {
     background: url(../img/home/style-carre.jpg) no-repeat center center;
     background-size: contain; }
@@ -11513,14 +11511,14 @@ section.home-search .home-search-mobile {
   height: 100%;
   width: 100%;
   opacity: 0.3;
-  background: rgba(0, 0, 0, 0.5);
+  background: black;
   -webkit-transition: opacity 0.2s;
   -moz-transition: opacity 0.2s;
   -ms-transition: opacity 0.2s;
   -o-transition: opacity 0.2s; }
 
 #home section.styles .background:hover:before {
-  opacity: 1; }
+  opacity: 0.5; }
 
 #home section.styles .btn-whitered {
   margin-top: 20px; }
