--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -626,8 +626,6 @@ section.home-search {
         &:hover {
             @include box-shadow(0px 4px 5px 0px $grey);
             @include transition (all 0.2s ease-out);
-            background-color: black;
-            opacity: 0.8;
         }
         &.carre {
             background: url(../img/home/style-carre.jpg) no-repeat center center;
@@ -653,13 +651,13 @@ section.home-search {
         height: 100%;
         width: 100%;
         opacity: 0.3;
-        background: rgba(0,0,0,.5);
+        background: black;
         @include transition(opacity 0.2s);
 
     }
 
     .background:hover:before {
-        opacity: 1;
+        opacity: 0.5;
     }
     .btn-whitered {
         margin-top: 20px;
