--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -239,6 +239,19 @@
 
             }
         }
+        .new-filters {
+            position: fixed;
+            z-index: 201;
+            left: 0;
+            top: 0;
+            background-color: #f4f4f4;
+            height: 100%;
+            padding-bottom: 65px;
+            max-width: 100%;
+            overflow-x: hidden;
+            width: 100%;
+            font-size: 2em;
+        }
         .tab-pane section {
             padding-bottom: 20px;
             margin-bottom: 20px;
