--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10374,7 +10374,7 @@ header {
         display: inline-block;
         color: white; }
         header div.dark-header div.container div div.user div {
-          font-size: initial; }
+          font-size: 14px; }
         header div.dark-header div.container div div.user .dropdown-menu {
           background-color: #343434; }
         header div.dark-header div.container div div.user img, header div.dark-header div.container div div.user object {
