--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -23,7 +23,7 @@ header {
 				display: inline-block;
 				color: white;
 				div {
-					font-size: initial;
+					font-size: 14px;
 				}
 				.dropdown-menu {
 					background-color: $dark-header;
