--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10912,12 +10912,16 @@ footer {
       color: white;
       letter-spacing: .5px; }
   footer .suggestion {
-    margin-bottom: 40px; }
+    padding-bottom: 40px;
+    padding-top: 40px; }
+    footer .suggestion .title {
+      padding-bottom: 10px;
+      text-transform: uppercase; }
     footer .suggestion p, footer .suggestion a {
       text-align: initial;
       color: #898989; }
     footer .suggestion p:not(.title) {
-      padding-bottom: 5px; }
+      padding-bottom: 3px; }
   footer p {
     font-size: 1.6em;
     padding-bottom: 30px; }
@@ -12559,8 +12563,8 @@ section.home-search .home-search-mobile {
       .salon#content #carousel-salon .carousel-inner .item img, .salon#content #carousel-salon .carousel-inner .item a > img {
         margin: auto; }
       .salon#content #carousel-salon .carousel-inner .item.placeholder {
-        height: 400px;
-        background: url(../img/placeholder-salon.png) repeat-x; }
+        background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.4)), url(../img/placeholder-salon.jpg);
+        background-size: cover; }
       .salon#content #carousel-salon .carousel-inner .item img {
         background-repeat: no-repeat;
         background-size: cover;
