--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -120,8 +120,8 @@
             }
 
             &.placeholder {
-                height: 400px;
-                background: url(../img/placeholder-salon.png) repeat-x;
+                background-image: linear-gradient(transparent, rgba(0,0,0,0.4)), url(../img/placeholder-salon.jpg);
+                background-size: cover;
             }
 
             img {
