--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -292,7 +292,7 @@
             z-index: 90;
             }
             width: 100%;
-            height: 65px;
+            height: 46px;
             position: absolute;
             bottom:0;
             left: 100%;
@@ -304,7 +304,8 @@
                     cursor: pointer;
                     display: block;
                     text-align: center;
-                    width: 65px;height: 64px;
+                    width: 65px;
+                    height: 44px;
                     position: relative;
                     border-right: 1px solid $border-color;
 
@@ -341,7 +342,7 @@
                 float: none;
                 display: inline-block;
                 width: calc(100% - 65px);
-                height: 65px;
+                height: 46px;
                 a {
                     text-transform: uppercase;
                     float: right;
@@ -350,12 +351,12 @@
                     @include box-shadow(0px 1px 3px rgba(0,0,0,0.15));
                 }
                 a.full {
-                    display: block;width: 100%;height: 65px;
+                    display: block;width: 100%;height: 46px;
                     text-transform: uppercase;
                     border-radius: 0; margin: 0;
                     font-weight: $semiBold;letter-spacing: 2px;
                     @include box-shadow(0 0 0 rgba(0,0,0,0.0));
-                    line-height: 60px;
+                    line-height: 39px;
                 }
             }
         }
