--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9855,9 +9855,7 @@ a {
       background: url(../img/icon-location.png) no-repeat center center;
       background-color: white;
       width: 50px;
-      background-size: 40%;
-      border: 1px solid #e6e6e6;
-      border-left: none; }
+      background-size: 40%; }
   .searchbar.small-search .btn-red {
     height: 40px;
     line-height: 25px;
@@ -10066,9 +10064,8 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
         font-weight: 400;
         font-size: 1.2em;
         padding: 10px 8px; }
-    @media screen and (min-width: 992px) {
-      .hairfies .single-hairfie figure:hover figcaption {
-        opacity: 1; } }
+    .hairfies .single-hairfie figure:hover figcaption {
+      opacity: 1; }
   .hairfies .single-hairfie .pricetag {
     position: absolute;
     top: 5px;
@@ -10915,16 +10912,12 @@ footer {
       color: white;
       letter-spacing: .5px; }
   footer .suggestion {
-    padding-bottom: 40px;
-    padding-top: 40px; }
-    footer .suggestion .title {
-      padding-bottom: 10px;
-      text-transform: uppercase; }
+    margin-bottom: 40px; }
     footer .suggestion p, footer .suggestion a {
       text-align: initial;
       color: #898989; }
     footer .suggestion p:not(.title) {
-      padding-bottom: 3px; }
+      padding-bottom: 5px; }
   footer p {
     font-size: 1.6em;
     padding-bottom: 30px; }
@@ -12566,8 +12559,8 @@ section.home-search .home-search-mobile {
       .salon#content #carousel-salon .carousel-inner .item img, .salon#content #carousel-salon .carousel-inner .item a > img {
         margin: auto; }
       .salon#content #carousel-salon .carousel-inner .item.placeholder {
-        background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.4)), url(../img/placeholder-salon.jpg);
-        background-size: cover; }
+        height: 400px;
+        background: url(../img/placeholder-salon.png) repeat-x; }
       .salon#content #carousel-salon .carousel-inner .item img {
         background-repeat: no-repeat;
         background-size: cover;
@@ -12856,9 +12849,7 @@ section.home-search .home-search-mobile {
       text-align: justify; }
     @media screen and (max-width: 767px) {
       .salon#content section.salon-content .comments .single-comment div div.title p {
-        display: inherit; }
-      .salon#content section.salon-content .comments .single-comment p.review {
-        padding: 0; } }
+        display: inherit; } }
     @media screen and (min-width: 767px) {
       .salon#content section.salon-content .bottom-tab {
         display: none !important; } }
@@ -13103,11 +13094,7 @@ section.home-search .home-search-mobile {
             font-weight: bolder;
             color: #898989; }
           .salon#content section.salon-content section .table-price div span.price {
-            float: right;
-            padding-right: 5px; }
-            @media screen and (min-width: 991px) {
-              .salon#content section.salon-content section .table-price div span.price {
-                padding-right: 10px; } }
+            float: right; }
         .salon#content section.salon-content section .table-price:not(:first-child) div.title {
           margin-top: 15px; }
     .salon#content section.salon-content #avis .row {
@@ -13616,7 +13603,7 @@ section.home-search .home-search-mobile {
             text-decoration: none; }
     .hairfie-singleView .single-view .like-group {
       width: 100%;
-      height: 46px;
+      height: 65px;
       position: absolute;
       bottom: 0;
       left: 100%; }
@@ -13637,7 +13624,7 @@ section.home-search .home-search-mobile {
           display: block;
           text-align: center;
           width: 65px;
-          height: 44px;
+          height: 64px;
           position: relative;
           border-right: 1px solid #f9f9f9; }
           .hairfie-singleView .single-view .like-group .like-btn a .glyphicon {
@@ -13683,7 +13670,7 @@ section.home-search .home-search-mobile {
         float: none;
         display: inline-block;
         width: calc(100% - 65px);
-        height: 46px; }
+        height: 65px; }
         .hairfie-singleView .single-view .like-group .cta a {
           text-transform: uppercase;
           float: right;
@@ -13695,7 +13682,7 @@ section.home-search .home-search-mobile {
         .hairfie-singleView .single-view .like-group .cta a.full {
           display: block;
           width: 100%;
-          height: 46px;
+          height: 65px;
           text-transform: uppercase;
           border-radius: 0;
           margin: 0;
@@ -13704,7 +13691,7 @@ section.home-search .home-search-mobile {
           -webkit-box-shadow: 0 0 0 transparent;
           -moz-box-shadow: 0 0 0 transparent;
           box-shadow: 0 0 0 transparent;
-          line-height: 39px; }
+          line-height: 60px; }
   .hairfie-singleView .related-hairfies {
     margin-bottom: 60px; }
     .hairfie-singleView .related-hairfies h3 {
