--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -237,6 +237,12 @@
                     margin-right: 5px;
                 }
             }
+            &.close-filters {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                @include flex-center;
+            }
         }
     }
     .subfilters {
